--- a/frontend/home/styles.css
+++ b/frontend/home/styles.css
@@ -61,3 +61,44 @@ ul li.item-menu a {
     display: flex;
     align-items: center;
 }
+
+/* table */
+#content {
+    width: 100%;
+    margin: 0 2rem;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+    margin-bottom: 10px;
+    font-size: 2rem;
+    font-weight: 600;
+    color: #000;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+    margin-top: 20px;
+}
+
+th, td {
+    text-align: left;
+    padding: 12px;
+}
+
+th {
+    background-color: #000000;
+    font-weight: bold;
+    color: #fff;
+}
+
+tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+tr:hover {
+    background-color: #f5f5f5;
+}
