--- a/frontend/register/styles.css
+++ b/frontend/register/styles.css
@@ -1,12 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Outfit', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Outfit", sans-serif;
 }
 
 body {
-    height: 100vh;
+  height: 100vh;
+}
+
+div.container {
+  width: 100%;
+  height: 100%;
+
+  display: flex;
 }
