--- a/frontend/register/styles.css
+++ b/frontend/register/styles.css
@@ -17,3 +17,47 @@ div.container {
 
   display: flex;
 }
+
+nav.menu {
+  width: 5rem;
+  height: 100%;
+  background-color: #202020;
+  padding: 40px 0 40px 1%;
+
+  box-shadow: 4px 0 0 #ff0077;
+  transition: 0.5s;
+
+  /* position: fixed; */
+  top: 0;
+  left: 0;
+  overflow: hidden;
+}
+
+ul {
+  height: 100%;
+  list-style-type: none;
+}
+
+ul li.item-menu {
+  transition: 0.2s;
+}
+
+ul li.active {
+  background: #ff0077;
+}
+
+ul li.item-menu:hover {
+  background: #ff0077;
+}
+
+ul li.item-menu a {
+  color: #fff;
+  font-size: 20px;
+  text-decoration: none;
+  padding: 20px 0.9rem;
+  display: flex;
+  margin-bottom: 20px;
+
+  display: flex;
+  align-items: center;
+}
