--- a/frontend/home/styles.css
+++ b/frontend/home/styles.css
@@ -144,3 +144,18 @@ tr:hover {
     width: 80%;
     max-width: 600px;
   }
+
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
